[package]
name = "loop_lib"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core loop engine library for running commands across directories"

[dependencies]
anyhow = "1.0"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
diff = "0.1"
indicatif = "0.17"
is-terminal = "0.4"

[dev-dependencies]
tempfile = "3.3"
